--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,16 @@
   --background: #ffffff;
   --foreground: #171717;
 
-  --image-size: 200px;
+  --image-height: 220px;
+  --image-width: 200px;
+
+  --duration-x-value: 2;
+  --duration-y-value: 4.5;
+
+  --duration-x: calc(var(--duration-x-value) * 1s);
+  --duration-y: calc(var(--duration-y-value) * 1s);
+
+  --animation-start: 5s;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -33,85 +42,58 @@ main {
   }
 }
 
-.photo {
+.me {
+  height: var(--image-height);
+  width: var(--image-width);
+
+  animation: color calc(var(--duration-x) * 10) steps(10, jump-start) infinite;
+  animation-delay: var(--animation-start);
+}
+
+.me-container {
   display: block;
   position: absolute;
   z-index: -1;
-  height: var(--image-size);
-  width: var(--image-size);
+  top: 10vh;
 
-  -webkit-animation: moveX 4s linear 0s infinite alternate,
-    moveY 3.4s linear 0s infinite alternate;
-  -moz-animation: moveX 4s linear 0s infinite alternate,
-    moveY 3.4s linear 0s infinite alternate;
-  -o-animation: moveX 4s linear 0s infinite alternate,
-    moveY 3.4s linear 0s infinite alternate;
-  animation: moveX 4s linear 0s infinite alternate,
-    moveY 3.4s linear 0s infinite alternate;
+  animation: moveX var(--duration-x) linear 0s infinite alternate,
+    moveY var(--duration-y) linear 0s infinite alternate,
+    colorContainer calc(var(--duration-y) * 10) steps(10, jump-start) infinite;
+  animation-delay: var(--animation-start);
 }
 
-@-webkit-keyframes moveX {
-  from {
-    left: 0;
-  }
-  to {
-    left: calc(100vw - var(--image-size));
-  }
-}
-@-moz-keyframes moveX {
-  from {
-    left: 0;
-  }
-  to {
-    left: calc(100vw - var(--image-size));
-  }
-}
-@-o-keyframes moveX {
-  from {
-    left: 0;
-  }
-  to {
-    left: calc(100vw - var(--image-size));
-  }
-}
 @keyframes moveX {
   from {
-    left: 0;
+    left: env(safe-area-inset-left);
   }
   to {
-    left: calc(100vw - var(--image-size));
+    left: calc(100vw - var(--image-width) - env(safe-area-inset-right));
   }
 }
 
-@-webkit-keyframes moveY {
-  from {
-    top: 0;
-  }
-  to {
-    top: calc(100vh - var(--image-size));
-  }
-}
-@-moz-keyframes moveY {
-  from {
-    top: 0;
-  }
-  to {
-    top: calc(100vh - var(--image-size));
-  }
-}
-@-o-keyframes moveY {
-  from {
-    top: 0;
-  }
-  to {
-    top: calc(100vh - var(--image-size));
-  }
-}
 @keyframes moveY {
   from {
-    top: 0;
+    top: env(safe-area-inset-top);
   }
   to {
-    top: calc(100vh - var(--image-size));
+    top: calc(100vh - var(--image-height) - env(safe-area-inset-bottom));
+  }
+}
+
+@keyframes color {
+  from {
+    filter: hue-rotate(0deg);
+  }
+  to {
+    filter: hue-rotate(360deg);
+  }
+}
+
+@keyframes colorContainer {
+  from {
+    filter: hue-rotate(0deg);
+  }
+  to {
+    filter: hue-rotate(360deg);
   }
 }
